kubernate/fastapi-esp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-esp-service
  namespace: microgrid
spec:
  selector:
    app: fastapi-esp
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
