kubernate/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: microgrid
spec:
  type: NodePort
  selector:
    app: fastapi
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
