kubernate/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: microgrid
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:2.7
        ports:
        - containerPort: 8086
        volumeMounts:
        - name: influxdb-storage
          mountPath: /var/lib/influxdb2
      volumes:
      - name: influxdb-storage
        persistentVolumeClaim:
          claimName: influxdb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service
  namespace: microgrid
spec:
  type: NodePort
  selector:
    app: influxdb
  ports:
    - port: 8086
      targetPort: 8086
      nodePort: 32086
