kubernate/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  namespace: microgrid
spec:
  type: ClusterIP                            # ✅ Internal only — called by middleware
  selector:
    app: ml-service
  ports:
    - port: 8000
      targetPort: 8000
