kubernate/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: microgrid
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /grafana/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
